<resources>
    <string name="app_name">Lunch</string>


    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user">New User?</string>
    <string name="gender">Gender</string>
    <string name="favourites">Favourites</string>
    <string name="special_instruction">Special Instruction</string>
    <string name="new_user_register">New User</string>
    <string name="existing_user"><u>Existing User?</u></string>
    <string name="register">Register</string>
    <string name="calender_menu">Calender Menu</string>
    <string name="entree">Entree</string>
    <string name="large">Large</string>
    <string name="regular">Regular</string>
    <string name="sandwiches">Sandwiches</string>
    <string name="salads">Salads</string>
    <string name="fruits_and_veggies">Fruits and Veggies</string>
    <string name="beverage">Beverage</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="title_activity_drawer_main">DrawerMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="manage_child">Manage Child</string>
    <string name="view_or_cancel">View Or Cancel</string>
    <string name="logout">Logout</string>
    <string name="manage_teacher">Manage Teacher</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="school_name_manage">School Name:</string>
    <string name="grade_manage">Grade:</string>
    <string name="elements_manage">Elements:</string>
    <string name="allergies_manage">Allergies:</string>
    <string name="favourites_manage">Favourites:</string>
    <string name="special_instructions_manage">Special Instructions:</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_child_teacher">Add Child/Teacher</string>
    <string name="transactions">Transactions</string>
    <string name="order_now">Order Now</string>
    <string name="view_or_cancel_order">View or Cancel Order</string>
    <string name="submit">Submit</string>
    <string name="add_child">Add Child</string>
    <string name="school_registration_id">School Registration Id</string>
    <string name="school_name">School Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="grade">Grade</string>
    <string name="elements">Elements</string>
    <string name="allergies">Allergies</string>
    <string name="favorites">Favorites</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="save">Save</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="add_teacher">Add Teacher</string>
    <string name="transaction">Transaction</string>
    <string name="available_balance">Available Balance</string>
    <string name="add_money">Add Money</string>
    <string name="transaction_history">Transaction History</string>
    <string name="change_password">Change Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="my_profile">My Profile</string>
    <string name="email_address">Email Address</string>
    <string name="phone">Phone</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="update">Update</string>
    <string name="loading">Loading…</string>
    <string name="credit_card_information">Credit Card Information</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="address">Address</string>
</resources>
